# monkesto

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  build.rs  clippy.toml  db_setup.sql  diesel.toml  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml  treasurer.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  zshrc
.github/workflows/: build.yml  build_and_test.yml  format.yml  release.yml  rust.yml  test.yml
.sqlx/: query-001135b796957bef72b40cbec54002a2f69011e46e4f5fa3606bef878692534e.json  query-00377d3f8d6aa9a36aeeb0a35ed085781c46f46bc6fe48af22cf160a8d265d59.json  query-017aafd7250860b13836c0e56a6c69cb8b65b7f29a5b5da29c46f3d7d70f0104.json  query-01fbaf0c6e33ddffc5be1aef4efcfc32811859b54061c3ade3710a0d5a5682b1.json  query-02f7c464a935169c04020a6704cbf400646f8118a790dd4eabfedb02ff912036.json  query-053e814c8c86833691d15780a6734f8e212a7e7c19a854d13b95bdebfafb6bad.json  query-06e53aad21b10bbe21ff86e3fa21092e7eadc4c1409b20e8ed947fd791c976de.json  query-14966d6caa2cc224645f9393e24fa11caa1a7f75b17a4e57760376a8b90a45bd.json  query-15883d7cfc7b298839d15eb1df24e3f1745b2d6fd9aaa81923dde3cd0ef88744.json  query-1e0c7cc52f6a4fbb0ee18c7aefcf1d97e6997be2970952f81a50e98b215f981b.json  query-1f138bf487a64fbd2f55322289a85db11da75d458ddc61a30a53a1c5a14ede3b.json  query-21fb3cc1375ec287ab62ae747c058b4cbd491f4c5b05b9aee2f8859cbc4b89f1.json  query-229858a146ae5c4aaf8bbdd14a65512c26e24122095d9ffc704c9e07d7f31908.json  query-2b09320e3ea51477bfd9623d2989493a4e0bbd4ec72cd65a93155e2c89d8f511.json  query-337a51a8486c064268a367d65cab12be2cd401ba1f44c38ae2bc435bc1357ea1.json  query-34d33e0be16618e72b90e646de2b0cb21395056e74ca832500560cfa19931a0e.json  query-363a4938388f18bdce4e1ebb97957b256db3f9b0f87e12fd13ddf797cbf4717f.json  query-3b486257f22ca10d33e59b69b1b7ccfbbb88549fa5ad4685ff039c565b767088.json  query-43e3536ad9f26245332de4e303d0684e1916a538f306999951676b7e7b545980.json  query-4481089103dc5dcf8163de21ab955a0c05ddd5c01765fbdb81410bc1d3f1bf50.json  query-48ecb193b9c4e9d0f263059c5bd25829192f73eaa2e24cd06737fb1ad2524d65.json  query-4dfbae364e9d8ac617021aad5f38f72da929ac29973b708ec09da309341dc33a.json  query-50c1c3f419ea5e711431b4ffd1ffd376be6898d8f36dc3b1abd6f8a3b53d6f28.json  query-5427960dff9b22a72f33feac36e1bcf918c41272a6c17d7b075653baebadf6dc.json  query-55a0306845bfb7bd3d2d222e91e1c2cf0ece7dfaa3125f4474e0fa88124a11f6.json  query-58f4cc3d8ee2d33b27b234a5e42c47fb0b67773058c8ea58dbc36998d2c29d88.json  query-5e5e011ab0d6c6f0cd791683c3df9e0cfdcae3b4946f2286f6fa2d4bfd2dd34e.json  query-5ff2f3f7ee51a67b1700304d0f393e77756b537cecc9f624ad49ec6e934acb44.json  query-6cd7037f1ec4efc71bb45985f2c0627276ad3f2482f263e3532620ca6f819a29.json  query-6f63bb63faed069fb8fe77b9e6468f7a4956937b73b371b0c190090b130efce5.json  query-73b19291cdd672dfc42b5b5a53f9492cb1b58788ca83be4cee0e5d85c113f791.json  query-77d48b6372493cfcb2ff577d46719a241b3ca6cf29f54fe1db5c83e0b6024f6f.json  query-7a5bb705917c082c31b1ab5de8f11dcbfc44fe5bbbedc64ed5890a97613c40a1.json  query-7acd3c9a55c246e8e1eef8a66e576c69b7beccef90f1470e6646d02df7b54870.json  query-81e5dfe32fdd1068650640c9851a549bc7f381f31f216b491ab9daf5c9db77e7.json  query-823c72b15707781758b5f7f112aa76b2c4ba5a8b44b8bd45b110da83ae156a66.json  query-841b5530e8507ac8774e052318c15d86ee8c865f6dccfe1940ff0c84bebb908d.json  query-888089d21c4b066d6ca9869ebf662be6e1045b1901836e666f8acf16ebd42033.json  query-90e8e77131fd5ef36cd8578a18e991722a76a7e10d7082062b49639bbad59ca7.json  query-980794b5b066dde4a0298b2c0b2ce8838df4e01f3c58a544315c5aff1ef4a530.json  (+27 more)
.zed/: settings.json
migrations/2026-05-07-190157-0000_create_accounts/: up.sql
migrations/2026-05-07-191212-0000_create_passkeys/: down.sql  up.sql
migrations/2026-05-07-191452-0000_create_users/: up.sql
migrations/2026-05-07-191844-0000_create_transactions/: up.sql
migrations/2026-05-07-192605-0000_create_examples/: down.sql  up.sql
migrations/2026-05-09-021759-0000_create_entites/: down.sql  up.sql
migrations/2026-05-10-171903-0000_create_journals/: down.sql  up.sql
migrations/2026-05-10-184250-0000_create_events/: up.sql
migrations/2026-05-10-220133-0000_create_sessions/: up.sql
migrations/2026-05-14-214901-0000_create_journal_members_lookup/: down.sql  up.sql
migrations/2026-05-19-000146-0000_create_entities/: up.sql
migrations/simple_sqlite/: 20260418174730_initial.sql
monkesto-derive/: Cargo.toml
monkesto-derive/src/: lib.rs
scripts/: install-hooks.sh  pre-commit
src/: account.md  account.rs  api.rs  app.rs  appstate.rs  auth.rs  authority.rs  authorization.rs  authz.rs  cuid.rs  email.rs  entitlement.rs  entity.rs  event.rs  event_id.rs  extensions.rs  grant.rs  handle_error.rs  home.rs  id.rs  ident.rs  journal.md  journal.rs  known_errors.rs  lib.rs  main.rs  maud_header.rs  monkesto_error.rs  name.rs  nav.rs  notfoundpage.rs  postcard.rs  queue.rs  rdh.rs  role.rs  schema.patch  schema.rs  seed.rs  service.rs  state.rs  (+9 more)
src/account/: commands.rs  mod.rs  service.rs  views.rs
src/api/: api.rs  main_api.rs  mod.rs  return_types.rs  user_info.rs
src/auth/: axum_login.rs  layout.rs  me.rs  mod.rs  passkey.rs  signin.rs  signout.rs  signup.rs  store.rs  user.rs  username.rs  view.rs
src/authn/: corepasskey.rs  me.rs  mod.rs  passkey.rs  signin.rs  signout.rs  signup.rs  store.rs  (+1 more)
(+117 files in other folders)
