[package]
name = "monkesto"
version = "0.0.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["monkesto-derive"]

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
tower-sessions = { version = "0.14" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
bitflags = { version = "2.10.0", features = ["serde"] }
chrono-tz = "0.10.4"
base64 = "0.22.1"
postcard = { version = "1.1.3", features = ["alloc"] }
cuid = { version = "2.0.4" }
maud = { version = "0.27.0", features = ["axum"] }
monkesto-derive = {path = "monkesto-derive" }
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
tracing-subscriber = "0.3.22"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
url = "2.5.7"
thiserror = "2.0.17"
axum-login = "0.18.0"
serde_json = "1.0.148"
dashmap = "6.1.0"

regex = "1.12.2"
phf = { version = "0.14.0", features = ["macros"] }
webauthn-rs-proto = "0.5.4"
tower-sessions-file-store = "0.2.0"
axum-extra = { version = "0.12.5", features = ["form"] }
rust_decimal = { version = "1.40.0", features = ["macros"] }
axum-test = "21.0.0"
paste = "1.0.15"
diesel = {version = "2.3.9", features = ["sqlite", "postgres", "returning_clauses_for_sqlite_3_35"]}
deadpool-diesel = { version = "0.6.1", features = ["postgres", "sqlite"] }

libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
openssl-sys = { version = "0.9.115", features = ["vendored"] }
tower-sessions-core = "0.15.0"
async-trait = "0.1.89"
diesel_migrations = {version = "2.3.2", features = ["sqlite", "postgres"]}
num_enum = "0.7.6"
time = "0.3.47"
http = "1.4.1"
uuid = { version = "1.23.2", features = ["v4"] }

[lints.clippy]
unwrap_used = "deny"

[dev-dependencies]
rstest = "0.26.1"
