[package]
name = "monkesto"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
tower-sessions = { version = "0.14" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
bitflags = { version = "2.10.0", features = ["serde"] }
chrono-tz = "0.10.4"
base64 = "0.22.1"
postcard = { version = "1.1.3", features = ["alloc"] }
cuid = { version = "2.0.4" }
maud = { version = "0.27.0", features = ["axum"] }
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
tracing-subscriber = "0.3.22"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
url = "2.5.7"
thiserror = "2.0.17"
axum-login = "0.18.0"
serde_json = "1.0.148"
dashmap = "6.1.0"
regex = "1.12.2"
phf = { version = "0.14.0", features = ["macros"] }
webauthn-rs-proto = "0.5.4"
axum-extra = { version = "0.12.5", features = ["form"] }
rust_decimal = { version = "1.40.0", features = ["macros"] }
axum-test = "21.0.0"
http = "1.4.1"
disintegrate = { version = "4.0.0", features = ["macros", "serde-json"] }
disintegrate-postgres = { version = "4.0.1", features = ["listener"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
async-trait = "0.1.89"

[lints.clippy]
unwrap_used = "deny"

[dev-dependencies]
rstest = "0.26.1"
